--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -1,1 +1,14 @@
-@use "./_typography.scss";
+@use "./typography";
+@use "./theme";
+@use "./forms";
+@use "./buttons";
+
+body {
+  background-color: theme.color("background", "main");
+}
+
+* {
+  &:focus {
+    outline: 2px solid theme.color("secondary", "700");
+  }
+}
