--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -18,6 +18,19 @@ $colors: (
     "900": #1A237E,
     "800": #283593,
     "700": #303F9F,
+    "contrastText": #fff,
+  ),
+  "success": (
+    "900": #004D40,
+    "800": #00695C,
+    "700": #00796B,
+    "contrastText": #fff,
+  ),
+  "error": (
+    "900": #B71C1C,
+    "800": #C62828,
+    "700": #D32F2F,
+    "contrastText": #fff,
   )
 );
 
