--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -2,6 +2,7 @@
 @use "./theme";
 @use "./forms";
 @use "./buttons";
+@use "./components/posts";
 
 body {
   background-color: theme.color("background", "main");
