--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,9 +1,16 @@
 extends ../layout
 
 block content
-  form(action="/posts", method="post") 
-      label(for="post-title") Title:
-      input(type="text", name="title")#post-title
-      label(for="post-content") Description:
-      input(type="text", name="content")#post-content
-      button(type="submit") Create
+  form(hx-post="/posts" hx-target="#posts-list-container") 
+    label(for="post-title") Title:
+    input(type="text", name="title")#post-title
+    label(for="post-content") Description:
+    input(type="text", name="content")#post-content
+    button(type="submit")#post-submit-btn Create
+  div#posts-list-container(
+    hx-get="/posts" 
+    hx-swap="innerHTML"
+    hx-trigger="load delay:0.5s, every 60s"
+  )
+    // Will be populated by server request using HTMX
+    
