--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/styles/global.css')
+    script(src="/js/htmx.min.js")
   body
     block content
